Fix overflow auto on grid body

--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -8,7 +8,7 @@
 .employee-modal__inputs {
     display: flex;
     flex-direction: row;
-    margin: 1rem 2rem;
+    margin: 1rem 3rem;
     align-items: center;
 }
 .employee-modal__pair {
